--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.0.2",
     "@mui/material": "^6.0.2",
+    "mongoose": "^8.6.1",
     "next": "14.2.8",
     "next-google-fonts": "^2.2.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "svix": "^1.32.0"
   },
   "devDependencies": {
     "@types/node": "^20",
