--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.0.2",
     "@mui/material": "^6.0.2",
+    "mongodb": "^6.8.1",
     "mongoose": "^8.6.1",
     "next": "14.2.8",
     "next-google-fonts": "^2.2.0",
