--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next-google-fonts": "^2.2.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "svix": "^1.32.0"
   },
   "devDependencies": {
