--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
-    "svix": "^1.32.0"
+    "svix": "^1.32.0",
+    "swiper": "^11.1.12"
   },
   "devDependencies": {
     "@types/node": "^20",
