--- a/package.json
+++ b/package.json
@@ -23,13 +23,15 @@
     "react-icons": "^5.3.0",
     "react-syntax-highlighter": "^15.5.0",
     "svix": "^1.32.0",
-    "swiper": "^11.1.12"
+    "swiper": "^11.1.12",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-syntax-highlighter": "^15.5.13",
+    "@types/uuid": "^10.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.8",
     "postcss": "^8",
